Sandbox/01-02-2025/force-app/main/default/objects/Segment_Monthly_Global__c/Segment_Monthly_Global__c.object-meta.xml
<CustomObject>
    <label>Segment Monthly Global</label>
    <nameField>
        <displayFormat>SMG-{0000000000}</displayFormat>
        <label>Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Monthly Global</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>