Sandbox/01-02-2025/force-app/main/default/objects/Segment_Monthly_Global__c/fields/Country_Raw__c.field-meta.xml
<CustomField>
    <fullName>Country_Raw__c</fullName>
    <label>Country Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>