Sandbox/01-02-2025/force-app/main/default/objects/Segment_Monthly_Global__c/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <formula>Segment_Category_Mapping__r.Segment_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Name</label>
    <type>Text</type>
</CustomField>